--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -10,7 +10,7 @@
       />
    </head>
 
-   <body>
+   <body class="bg-charcoal text-anti-flash-white">
       <div id="root"></div>
       <script type="module" src="/src/main.jsx"></script>
    </body>
