--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <meta charset="UTF-8" />
-      <title>Electron</title>
+      <title>Fumble &nbsp;&nbsp; | &nbsp;&nbsp; Delete images interactively</title>
       <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
       <meta
          http-equiv="Content-Security-Policy"
