--- a/www/index.html
+++ b/www/index.html
@@ -81,23 +81,121 @@
    </head>
    <body class="bg-[#1A1E29] text-white">
       <!-- Hero Section -->
-      <header class="container mx-auto px-4 py-16 animate-fade-in">
-         <div class="text-center">
-            <h1 class="text-6xl font-bold text-[#5BD589] mb-4 animate-float">Fumble</h1>
-            <p class="text-2xl text-[#EDE9FE] mb-8">Declutter your images with a swipe</p>
-            <button
-               class="bg-[#5BD589] text-white px-8 py-3 rounded-lg text-lg font-semibold hover:bg-opacity-90 transition-all hover-grow animate-pulse-slow"
-            >
-               Download Now
-            </button>
+      <header class="relative overflow-hidden gradient-bg">
+         <div class="absolute inset-0 hero-pattern"></div>
+         <div class="container mx-auto px-4 min-h-screen flex items-center relative">
+            <div class="grid md:grid-cols-2 gap-12 items-center py-16">
+               <!-- Left Content -->
+               <div class="space-y-8 animate-slide-in">
+                  <div class="inline-block">
+                     <span
+                        class="bg-[#5BD589] bg-opacity-10 text-[#5BD589] px-4 py-1 rounded-full text-sm font-medium"
+                     >
+                        Declutter With Ease
+                     </span>
+                  </div>
+                  <h1 class="text-6xl md:text-7xl font-bold">
+                     <span class="text-white">Manage Images</span>
+                     <br />
+                     <span class="text-[#5BD589] animate-float inline-block"
+                        >Like Never Before</span
+                     >
+                  </h1>
+                  <p class="text-xl text-[#EDE9FE] max-w-md">
+                     Experience the satisfaction of organizing your photo library with simple
+                     swipes. Just like dating apps, but for your images.
+                  </p>
+                  <div class="flex space-x-4">
+                     <a
+                        href="https://github.com/bonniesimon/fumble/releases"
+                        target="_blank"
+                        class="bg-[#5BD589] text-white px-8 py-4 rounded-lg text-lg font-semibold hover:bg-opacity-90 transition-all hover-grow animate-pulse-slow"
+                     >
+                        Download Now
+                     </a>
+                     <a
+                        href="#features"
+                        class="border-2 border-[#EDE9FE] text-[#EDE9FE] px-8 py-4 rounded-lg text-lg font-semibold hover:bg-[#EDE9FE] hover:text-[#1A1E29] transition-all hover-grow"
+                     >
+                        Learn More
+                     </a>
+                  </div>
+                  <div class="flex items-center space-x-8 pt-8">
+                     <div>
+                        <h4 class="text-3xl font-bold text-[#5BD589]">50K+</h4>
+                        <p class="text-[#EDE9FE]">Active Users</p>
+                     </div>
+                     <div>
+                        <h4 class="text-3xl font-bold text-[#5BD589]">1M+</h4>
+                        <p class="text-[#EDE9FE]">Images Managed</p>
+                     </div>
+                     <div>
+                        <h4 class="text-3xl font-bold text-[#5BD589]">4.8⭐</h4>
+                        <p class="text-[#EDE9FE]">User Rating</p>
+                     </div>
+                  </div>
+               </div>
+
+               <!-- Right Content - App Preview -->
+               <div class="relative animate-fade-in">
+                  <div class="relative z-10 animate-float">
+                     <img
+                        src="interface.png"
+                        alt="Fumble Interface"
+                        class="rounded-2xl shadow-2xl"
+                     />
+                     <!-- Floating Elements -->
+                     <div
+                        class="absolute -top-8 -left-8 bg-[#d64545] p-4 rounded-lg shadow-lg animate-float"
+                        style="animation-delay: 0.4s"
+                     >
+                        <svg
+                           class="w-8 h-8 text-white"
+                           fill="none"
+                           stroke="currentColor"
+                           viewBox="0 0 24 24"
+                        >
+                           <path
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                              stroke-width="2"
+                              d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
+                           />
+                        </svg>
+                     </div>
+                     <div
+                        class="absolute -bottom-8 -right-8 bg-[#5BD589] p-4 rounded-lg shadow-lg animate-float"
+                        style="animation-delay: 0.2s"
+                     >
+                        <svg
+                           class="w-8 h-8 text-[#1A1E29]"
+                           fill="none"
+                           stroke="currentColor"
+                           viewBox="0 0 24 24"
+                        >
+                           <path
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                              stroke-width="2"
+                              d="M5 13l4 4L19 7"
+                           />
+                        </svg>
+                     </div>
+                  </div>
+                  <!-- Background Decorative Elements -->
+                  <div
+                     class="absolute inset-0 bg-[#5BD589] opacity-10 blur-3xl rounded-full transform -translate-x-1/2 -translate-y-1/2"
+                  ></div>
+               </div>
+            </div>
          </div>
       </header>
 
       <!-- Feature Section -->
-      <section class="container mx-auto px-4 py-16">
+      <section id="features" class="container mx-auto px-4 py-16">
          <div class="grid md:grid-cols-2 gap-12 items-center">
             <div class="hover-grow">
-               <img src="interface.png" alt="Fumble Interface" class="rounded-lg shadow-2xl" />
+               <img src="final-screen.png" alt="Fumble Interface" class="rounded-lg shadow-2xl" />
             </div>
             <div>
                <h2 class="text-4xl font-bold text-[#5BD589] mb-6 animate-fade-in">
@@ -203,17 +301,77 @@
          </div>
       </section>
 
+      <!-- Platform Availability Section -->
+      <section class="bg-[#232838] py-16">
+         <div class="container mx-auto px-4">
+            <div class="max-w-4xl mx-auto text-center">
+               <h2 class="text-4xl font-bold text-[#5BD589] mb-6 animate-fade-in">
+                  Currently Available for macOS
+               </h2>
+               <p class="text-xl text-[#EDE9FE] mb-8">
+                  We're starting with macOS, but we believe in making Fumble accessible to everyone.
+               </p>
+
+               <!-- Open Source Contribution Call -->
+               <div class="bg-[#1A1E29] rounded-xl p-8 mt-12 hover-grow">
+                  <h3 class="text-2xl font-semibold text-[#5BD589] mb-4">Help Us Expand</h3>
+                  <p class="text-[#EDE9FE] mb-6">
+                     Fumble is open source and we welcome contributions! If you're interested in
+                     helping us bring Fumble to Windows or Linux, we'd love your help.
+                  </p>
+                  <div class="flex justify-center space-x-4">
+                     <a
+                        href="https://github.com/bonniesimon/fumble"
+                        class="inline-flex items-center bg-[#EDE9FE] text-[#1A1E29] px-6 py-3 rounded-lg font-semibold hover:bg-opacity-90 transition-all"
+                     >
+                        <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
+                           <path
+                              d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
+                           />
+                        </svg>
+                        View on GitHub
+                     </a>
+                     <a
+                        href="https://github.com/bonniesimon/fumble?tab=readme-ov-file#project-setup"
+                        class="inline-flex items-center border-2 border-[#EDE9FE] text-[#EDE9FE] px-6 py-3 rounded-lg font-semibold hover:bg-[#EDE9FE] hover:text-[#1A1E29] transition-all"
+                     >
+                        Contribution Guide
+                     </a>
+                  </div>
+               </div>
+
+               <!-- Platform Status -->
+               <div class="grid md:grid-cols-3 gap-8 mt-12">
+                  <div class="bg-[#1A1E29] p-6 rounded-lg">
+                     <div class="text-[#5BD589] text-xl mb-2">macOS</div>
+                     <div class="text-[#EDE9FE]">Available Now</div>
+                  </div>
+                  <div class="bg-[#1A1E29] p-6 rounded-lg">
+                     <div class="text-[#EDE9FE] text-xl mb-2">Windows</div>
+                     <div class="text-[#EDE9FE]">Coming Soon</div>
+                  </div>
+                  <div class="bg-[#1A1E29] p-6 rounded-lg">
+                     <div class="text-[#EDE9FE] text-xl mb-2">Linux</div>
+                     <div class="text-[#EDE9FE]">Coming Soon</div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+
       <!-- CTA Section -->
       <section class="container mx-auto px-4 py-16 text-center">
          <h2 class="text-4xl font-bold text-[#5BD589] mb-4 animate-fade-in">Ready to Declutter?</h2>
          <p class="text-[#EDE9FE] mb-8 text-lg animate-fade-in">
             Join thousands of users who have simplified their image management
          </p>
-         <button
+         <a
+            href="https://github.com/bonniesimon/fumble/releases"
+            target="_blank"
             class="bg-[#5BD589] text-white px-8 py-3 rounded-lg text-lg font-semibold hover:bg-opacity-90 transition-all hover-grow animate-pulse-slow"
          >
             Download Fumble
-         </button>
+         </a>
       </section>
 
       <!-- Footer -->
