update: subhero copy

--- a/www/index.html
+++ b/www/index.html
@@ -120,18 +120,43 @@
                         Learn More
                      </a>
                   </div>
-                  <div class="flex items-center space-x-8 pt-8">
-                     <div>
-                        <h4 class="text-3xl font-bold text-[#5BD589]">50K+</h4>
-                        <p class="text-[#EDE9FE]">Active Users</p>
+                  <div class="grid grid-cols-3 gap-6 pt-8">
+                     <div class="bg-[#232838] p-6 rounded-xl hover-grow transition-all">
+                        <svg
+                           class="w-8 h-8 text-[#5BD589] mb-2"
+                           fill="none"
+                           stroke="currentColor"
+                           viewBox="0 0 24 24"
+                        >
+                           <path
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                              stroke-width="2"
+                              d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                           ></path>
+                        </svg>
+                        <h4 class="font-semibold text-[#5BD589]">Save Time</h4>
+                        <p class="text-sm text-[#EDE9FE]">
+                           Clean your photo library in minutes, not hours
+                        </p>
                      </div>
-                     <div>
-                        <h4 class="text-3xl font-bold text-[#5BD589]">1M+</h4>
-                        <p class="text-[#EDE9FE]">Images Managed</p>
-                     </div>
-                     <div>
-                        <h4 class="text-3xl font-bold text-[#5BD589]">4.8⭐</h4>
-                        <p class="text-[#EDE9FE]">User Rating</p>
+
+                     <div class="bg-[#232838] p-6 rounded-xl hover-grow transition-all">
+                        <svg
+                           class="w-8 h-8 text-[#5BD589] mb-2"
+                           fill="none"
+                           stroke="currentColor"
+                           viewBox="0 0 24 24"
+                        >
+                           <path
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                              stroke-width="2"
+                              d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                           ></path>
+                        </svg>
+                        <h4 class="font-semibold text-[#5BD589]">Fun Experience</h4>
+                        <p class="text-sm text-[#EDE9FE]">Decluttering shouldn't be boring.</p>
                      </div>
                   </div>
                </div>
