fix styles not working

--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
    <head>
       <title>Fumble - Declutter Your Images</title>
       <script src="https://cdn.tailwindcss.com"></script>
-      <style src="styles.css"></style>
+      <link href="style.css" rel="stylesheet" type="text/css" />
    </head>
    <body class="bg-[#1A1E29] text-white">
       <!-- Hero Section -->
