remove 'swiping' interface mentions

--- a/www/index.html
+++ b/www/index.html
@@ -28,8 +28,8 @@
                      >
                   </h1>
                   <p class="text-xl text-[#EDE9FE] max-w-md">
-                     Experience the satisfaction of organizing your photo library with simple
-                     swipes. Just like dating apps, but for your images.
+                     Experience the satisfaction of organizing your photo library with a dating app
+                     like UI.
                   </p>
                   <div class="flex space-x-4">
                      <a
@@ -178,7 +178,7 @@
                </h2>
                <div class="space-y-4 text-[#EDE9FE]">
                   <p class="text-lg animate-fade-in">
-                     Say goodbye to messy photo libraries. Fumble brings the familiar swipe
+                     Say goodbye to messy photo libraries. Fumble brings the familiar dating app
                      interface to image management.
                   </p>
                   <ul class="space-y-3">
@@ -196,7 +196,7 @@
                               d="M5 13l4 4L19 7"
                            ></path>
                         </svg>
-                        Simple swipe interface - keep or delete
+                        Simple interface - keep or delete images
                      </li>
                      <li class="flex items-center feature-item animate-fade-in opacity-0">
                         <svg
@@ -260,8 +260,8 @@
                   >
                      <span class="text-2xl text-[#5BD589]">2</span>
                   </div>
-                  <h3 class="text-xl font-semibold text-[#5BD589] mb-2">Swipe Through</h3>
-                  <p class="text-[#EDE9FE]">Keep or delete images with intuitive swipe gestures</p>
+                  <h3 class="text-xl font-semibold text-[#5BD589] mb-2">Make swift decision</h3>
+                  <p class="text-[#EDE9FE]">Keep or delete images with intuitive UI</p>
                </div>
                <div class="text-center p-6 hover-grow">
                   <div
@@ -338,7 +338,7 @@
       <section class="container mx-auto px-4 py-16 text-center">
          <h2 class="text-4xl font-bold text-[#5BD589] mb-4 animate-fade-in">Ready to Declutter?</h2>
          <p class="text-[#EDE9FE] mb-8 text-lg animate-fade-in">
-            Join thousands of users who have simplified their image management
+            Join users who have simplified their image management
          </p>
          <a
             href="https://github.com/bonniesimon/fumble/releases"
