add notes from author section

--- a/www/index.html
+++ b/www/index.html
@@ -236,6 +236,47 @@
          </div>
       </section>
 
+      <!-- Notes from the Author -->
+      <section class="bg-[#232838] py-16">
+         <div class="container mx-auto px-4">
+            <div class="max-w-3xl mx-auto">
+               <h2 class="text-4xl font-bold text-[#5BD589] mb-8 text-center">
+                  Notes from the Author
+               </h2>
+
+               <div class="bg-[#1A1E29] rounded-xl p-8 space-y-6">
+                  <div class="space-y-4">
+                     <p class="text-[#EDE9FE] leading-relaxed">
+                        As a hobbyist photographer, I often found myself overwhelmed after photo
+                        sessions. With hundreds of images to review and about 60% of them destined
+                        for deletion, the process of sorting through them was time-consuming and
+                        tedious. This was the frustration that led me to build Fumble – a tool to
+                        make this process faster and more enjoyable.
+                     </p>
+                  </div>
+
+                  <div class="space-y-4">
+                     <p class="text-[#EDE9FE] leading-relaxed">
+                        But it's not just for photographers. We've all been there – that neglected
+                        downloads folder filled with screenshots, memes, and images we no longer
+                        need. Fumble turns the daunting task of cleaning up these digital spaces
+                        into a quick and almost enjoyable experience.
+                     </p>
+                  </div>
+
+                  <div
+                     class="mt-8 p-6 bg-[#232838] rounded-lg border border-[#5BD589] border-opacity-20"
+                  >
+                     <p class="text-[#EDE9FE] italic">
+                        "Every tool I create is born from a real problem I've faced. Fumble is my
+                        solution to making image management less of a chore and more of a breeze."
+                     </p>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+
       <!-- How It Works -->
       <section class="bg-[#232838] py-16">
          <div class="container mx-auto px-4">
