wordsmithing www [testing gh action]

--- a/www/index.html
+++ b/www/index.html
@@ -269,7 +269,7 @@
                   >
                      <p class="text-[#EDE9FE] italic">
                         "Every tool I create is born from a real problem I've faced. Fumble is my
-                        solution to making image management less of a chore and more of a breeze."
+                        solution to making image management less of a chore."
                      </p>
                   </div>
                </div>
