add linux available

--- a/www/index.html
+++ b/www/index.html
@@ -368,7 +368,7 @@
                   </div>
                   <div class="bg-[#1A1E29] p-6 rounded-lg">
                      <div class="text-[#EDE9FE] text-xl mb-2">Linux</div>
-                     <div class="text-[#EDE9FE]">Coming Soon</div>
+                     <div class="text-[#EDE9FE]">Available Now</div>
                   </div>
                </div>
             </div>
