fix: use Tailwind CLI with GitHub Actions build step
Tailwind CDN is not for production use. Instead, I'm now building the
tailwind css files using github actions.

--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Fumble - Declutter Your Images</title>
-      <script src="https://cdn.tailwindcss.com"></script>
+      <link href="output.css" rel="stylesheet" type="text/css" />
       <link href="style.css" rel="stylesheet" type="text/css" />
    </head>
    <body class="bg-[#1A1E29] text-white">
@@ -322,11 +322,8 @@
          <div class="container mx-auto px-4">
             <div class="max-w-4xl mx-auto text-center">
                <h2 class="text-4xl font-bold text-[#5BD589] mb-6 animate-fade-in">
-                  Currently Available for macOS
+                  Currently Available for macOS & Linux
                </h2>
-               <p class="text-xl text-[#EDE9FE] mb-8">
-                  We're starting with macOS, but we believe in making Fumble accessible to everyone.
-               </p>
 
                <!-- Open Source Contribution Call -->
                <div class="bg-[#1A1E29] rounded-xl p-8 mt-12 hover-grow">
@@ -367,7 +364,7 @@
                      <div class="text-[#EDE9FE]">Coming Soon</div>
                   </div>
                   <div class="bg-[#1A1E29] p-6 rounded-lg">
-                     <div class="text-[#EDE9FE] text-xl mb-2">Linux</div>
+                     <div class="text-[#5BD589] text-xl mb-2">Linux</div>
                      <div class="text-[#EDE9FE]">Available Now</div>
                   </div>
                </div>
