--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -12,6 +12,6 @@
 
    <body class="bg-raisin-black-500 text-anti-flash-white">
       <div id="root"></div>
-      <script type="module" src="/src/main.jsx"></script>
+      <script type="module" src="/src/main.tsx"></script>
    </body>
 </html>
